fixing problem with hided last photo by scrollbar in smaller screen

--- a/style.css
+++ b/style.css
@@ -63,6 +63,10 @@ html {
 }
 
 @media (max-width: 700px) {
+  .gallery {
+    margin-bottom: 14rem;
+  }
+
   .scrollbar {
     border: none;
     box-shadow: 0px 0px 40px 20px rgba(255, 165, 0, 1);
